<resources>
    <string name="app_name">foobar</string>
    <string name="modal_button">Im a modal</string>
    <string name="open_modal_button">Open modal sheet</string>
    <string name="open_fragment">Open Next Normal Stack Fragment</string>
    <string name="open_sheet_button">Open standard sheet</string>
    <string name="pop_fragment">Pop Stack Fragment</string>
    <string name="replace_content">Replace content with snapshot</string>
    <string name="regular_formsheet_fragment">Open Regular FormSheet</string>
    <string name="expanded">Expanded</string>
    <string name="half_expanded">HalfExpanded</string>
    <string name="collapsed">Collapsed</string>
    <string name="hidden">Hidden</string>
    <string name="lorem">Lorem ipsum et delai</string>
    <string name="close">Close</string>
    <string name="root_fragment_name">RootFragment</string>
    <string name="root_fragment_tag">RootFragmentTag</string>
    <string name="standard_sheet_name">StandardBottomSheet</string>
</resources>